@@ -12,6 +12,7 @@ from torch_geometric.nn import GATConv
 from sklearn.utils.validation import check_is_fitted
 
 from . import BaseDetector
+from ..utils.utility import validate_device
 from ..utils.metric import eval_roc_auc
 
 
@@ -262,10 +263,7 @@ class AnomalyDAE(BaseDetector):
         # training param
         self.lr = lr
         self.epoch = epoch
-        if gpu >= 0 and torch.cuda.is_available():
-            self.device = 'cuda:{}'.format(gpu)
-        else:
-            self.device = 'cpu'
+        self.device = validate_device(gpu)
 
         # other param
         self.verbose = verbose
