@@ -1,2 +1,6 @@
 v<0.1.0>, <04/01/2022> -- Initial release.
 v<0.1.1>, <04/04/2022> -- Improvements on stability.
+v<0.2.0>, <04/14/2022> -- Support mini-batch for selected models.
+v<0.2.0>, <04/23/2022> -- Unify the default device choice with robust check.
+
+
